minor fix in citation in readme; clarifying msgs in countReads

--- a/README
+++ b/README
@@ -460,7 +460,7 @@ Please cite our paper (CITE_RACS) when ever you are using RACS.
 
 Main paper to cite about RACS:
 - "RACS: Rapid Analysis of ChIP-Seq data for contig based genomes",
-  Ponce et al., BMC in press.
+  Ponce et al., BMC under review.
 
 
 Publications where RACS has been used:
