updating references in the README

--- a/README
+++ b/README
@@ -466,9 +466,9 @@ Main paper to cite about RACS:
 Publications where RACS has been used:
 - "The Med31 conserved component of the divergent Mediator complex in
   Tetrahymena thermophila participates in developmental regulation",
-  Garg et al., Current Biology in press.
+  Garg et al., Current Biology (2019) Vol 29(13).
 
 - "The bromodomain-containing protein Ibd1 links multiple chromatin-related
   protein complexes to highly expressed genes in Tetrahymena thermophila",
-  Saettone et al, Epigenetics & Chromatin (2018).
+  Saettone et al, Epigenetics & Chromatin (2018) Vol 11(10).
 
