--- a/README
+++ b/README
@@ -492,9 +492,9 @@ IV.iv) Full analysis of Oxytricha trifallax
 
 	# 2) use the auxiliary tools we provide to download the datasets for Oxytricha trifallax
 	# 2.i) first the reference genome
-	PATHtoRACSrepo/datasets/get....
+	PATHtoRACSrepo/datasets/get_GFF3-files.sh
 	# 2.ii) now the ChIP-seq data, you will the NCBI-SRA toolkit for this step!
-	PATHtoRACS/repo/datasets/get...
+	PATHtoRACS/repo/datasets/get_OXYchIPseq-files.sh
 
 	# 3) determination of ORFs with RACS
 	PATHtoRACSrepo/core/countReads.sh  SRX483016_1.fastq.gz  SRX483017_1.fastq.gz  Oxytricha_trifallax_022112_assembly.fasta  Oxytricha_trifallax_022112.gff3  /dev/shm/  16  PATHtoRACS/core/defns/OXY_gene.idf
