--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 RACS: Rapid Analysis of ChIP-Seq data for contig based genomes
 
 These tools are a serie of scripts developed to facilitate the analysis
-of ChIP-Seq data and has been applied to the organism T. Thermophila.
+of ChIP-Seq data and has been applied to the organism T. thermophila.
 
 
 === Content ===
@@ -339,7 +339,7 @@ memory utilization.
 genomic files for Tetrahymena thermophilaT and Oxytrichia trifallax, as well as,
 the publicaclly available ChIP-seq data for the Oxytrichia trifallax.
 Both scripts are available in the 'datasets' directory:
-	get_GFF3-files.sh  will download the corresponding gff3 files for T.Thermophila and O.Trifallax.
+	get_GFF3-files.sh  will download the corresponding gff3 files for T.thermophila and O.trifallax.
 
 	get_OXYchIPseq-files.sh  will download two runs of ChIP-next gen. seq. data for Oxytrichia trifallax. Because this data is located at NCBI repositories the user should hav installed the SRA toolkit tools in order to access and download this data.
 
@@ -352,8 +352,8 @@ I) calling peaks for ORF
 I.i) the following command will run the countReads.sh script using:
 	- 'data2/_1_MED1_INPUT_S25_L007_R1_001.fasta.gz'  as the file with the INPUT reads
 	- 'data2/_3_MED1_IP_S27_L007_R1_001.fasta.gz' as the file with IP reads
-	- 'T_thermophila_June2014_assembly.fasta' as the reference genome for the T.Thermophila organism
-	- 'T_thermophila_June2014.gff3' as the annotation file for the T.Thermophila
+	- 'T_thermophila_June2014_assembly.fasta' as the reference genome for the T.thermophila organism
+	- 'T_thermophila_June2014.gff3' as the annotation file for the T.thermophila
 	- '/tmp/' as working space
 
 	PATHtoRACSrepo/core/countReads.sh   data2/_1_MED1_INPUT_S25_L007_R1_001.fastq.gz  data2/_3_MED1_IP_S27_L007_R1_001.fastq.gz  T_thermophila_June2014_assembly.fasta  T_thermophila_June2014.gff3  /tmp/ 
@@ -435,7 +435,7 @@ III') normalization and cut-off without a negative control
 	--- in prep. ---
 
 
-IV) Proccessing generic organisms/terms, other than Tetrahymena Thermophila
+IV) Proccessing generic organisms/terms, other than Tetrahymena thermophila
 
 IV.i) Reference table manipulation
 	During the analysis and determination of ORF, the reference file for
@@ -443,15 +443,15 @@ the given organsim is processed by selecting the appropiate terms and filters
 to carve the corresponding terms.
 In the subdirectory "core/defns", we present examples of what terms and
 filters have to be specified; eg.
-	TT_gene.id  _ for selecting "genes" from Tetrahymena Thermophila
-	TT_mRNA.id  _ for selecting "mRNA" from Tetrahymena Thermophila
-	OXY_gene.id  _ for selecting "genes" from the Oxytricha Trifallax
+	TT_gene.id  _ for selecting "genes" from Tetrahymena thermophila
+	TT_mRNA.id  _ for selecting "mRNA" from Tetrahymena thermophila
+	OXY_gene.id  _ for selecting "genes" from the Oxytricha trifallax
 
-For instance, the following command will select the micro-RNA for the Tetrahymena Thermophila,
+For instance, the following command will select the micro-RNA for the Tetrahymena thermophila,
 
 	PATHtoRACSrepo/core/table.sh  T_thermophila_June2014.gff3  PATHtoRACS/core/defns/TT_mRNA.id
 
-or, the "genes" for the Oxytricha Trifallax,
+or, the "genes" for the Oxytricha trifallax,
 
 	PATHtoRACSrepo/core/table.sh  Oxytricha_trifallax_022112.gff3  PATHtoRACS/core/defns/OXY_gene.id
 
