--- a/README
+++ b/README
@@ -106,6 +106,8 @@ RACS
  |   └── PostProcessing_Intergenic.xlsx
  |   └── IBD1_ORF.xlsx
  |   └── IBD1_Intergenic.xlsx
+ |   +-- get_GFF3-files.sh
+ |   +-- get_OXYchIPseq-files.sh
  ├── hpc
  │   └── submission.pbs
  |   └── submission.slurm
@@ -460,7 +462,7 @@ ORFs,
 
 	PATHtoRACSrepo/core/countReads.sh   data2/_1_MED1_INPUT_S25_L007_R1_001.fastq.gz  data2/_3_MED1_IP_S27_L007_R1_001.fastq.gz  T_thermophila_June2014_assembly.fasta  T_thermophila_June2014.gff3  /dev/shm/  16  PATHtoRACS/core/defns/TT_mRNA.id
 
-        PATHtoRACSrepo/core/countReads.sh  SRX483016_1.fastq.gz  SRX483017_1.fastq.gz  Oxytricha_trifallax_022112_assembly.fasta  Oxytricha_trifallax_022112.gff3  /dev/shm/  16  PATHtoRACS/core/defns/OXY_gene.idf
+        PATHtoRACSrepo/core/countReads.sh  SRX483016_1.fastq.gz  SRX483017_1.fastq.gz  Oxytricha_trifallax_022112_assembly.fasta  Oxytricha_trifallax_022112.gff3  /dev/shm/  16  PATHtoRACS/core/defns/OXY_gene.id
 
 where "SRX483017_1.fastq.gz" corresponds to the data for run #1 ChIP-Seq, and
 "SRX483016_1.fast1.gz" corresponds to the data for the Input of the
