--- a/README
+++ b/README
@@ -179,13 +179,26 @@ to the packages SAMtools and BWA.
 This script can utilize multi-core parallelization when possible via threads
 which can be explicitly input by the user or automatically detected by the script.
 
-At the end of the execution the script will produce a table indicating XXXXX.
-The resulting files, some intermediate files and the final tables, are located
-in a directory created in the directory from where the script is executed named
-'ORF_RACS_results-YYYYMMDD-HHMMSS' where 'YYYYMMDD-HHMMSS' indicates the year-month-day
-and time when the script was executed.
+At the end of the execution, the script will create a directory named
+'ORF_RACS_results-YYYYMMDD-HHMMSS' where 'YYYYMMDD-HHMMSS' indicates the
+year-month-day and time when the script was executed.
+The resulting files generated when executing the ORF countReads script,
+including some intermediate files and the final table, will be located in this
+"ORF_RACS_results-..." directory.
+Some of these intermediate files located in the "ORF_RACS_results-..." directory,
+e.g. bam and bai files, could be useful to keep for additional analysis, such as,
+visually inspecting some of them with IGV.
 
+In particular within this results' directory, there will be a file named
+"FINAL.table....", which is a plain text file presenting the results for the
+reads in the ORF in tabulated format with the following columns:
 
+	location  name  description  GeneSize  INPUT_reads  IP_reads
+
+This "FINAL.table...." file, which summarizes the results for the reads in the
+ORF, is one of the mandatory 'inputs' for the IGR scripts of the RACS pipeline.
+
+Summary of "Inputs" and "Outputs" of the ORF 'countReads.sh" script:
 Inputs:
 	- INPUT file (fastq.gz)
 	- IP file (fastq.gz)
@@ -205,15 +218,15 @@ located and find the different tools needed during the execution.
 Also, please do not "source" the scripts, they are set to be run as executable scripts,
 ie. execute the scripts in this way,
 
-	PATHtoRACS/core/../scriptNAME.sh  args
+	PATHtoRACSrepo/core/../scriptNAME.sh  args
 
 do *NOT* execute them in this way,
 
-	. PATHtoRACS/core/../scriptNAME.sh  args
+	. PATHtoRACSrepo/core/../scriptNAME.sh  args
 
 NOR in this way neither,
 
-	source PATHtoRACS/core/../scriptNAME.sh  args
+	source PATHtoRACSrepo/core/../scriptNAME.sh  args
 
 Our scripts will also try to detect this situation and prevent the user from doing this.
 Due to the modular implementation we designed for RACS, and in order to allow RACS
@@ -424,8 +437,8 @@ It requires 3 arguments:
    - 3rd argument: "PF-IP-value"  PF value corresponding to the IP file
    - 4th argument: 'A' or 'D' (OPTIONAL), when this 4th argument is specified, an additional table is created being ordered with respect to the IP/INPUT ratio, in "A"scending or "D"ecreasing order 
 
-       PATHtoRACS/core/normalizeORF.sh  FINAL.table.XXXX  14694464  10148171 
-       PATHtoRACS/core/normalizeORF.sh  FINAL.table.XXXX  14694464  10148171  A
+       PATHtoRACSrepo/core/normalizeORF.sh  FINAL.table.XXXX  14694464  10148171 
+       PATHtoRACSrepo/core/normalizeORF.sh  FINAL.table.XXXX  14694464  10148171  A
 
 Alternatively one could use a couple of spreadsheets available in the 'datasets'
 directory, if the user prefers to proceed in an interactive manner.
@@ -448,11 +461,11 @@ filters have to be specified; eg.
 
 For instance, the following command will select the micro-RNA for the Tetrahymena thermophila,
 
-	PATHtoRACSrepo/core/table.sh  T_thermophila_June2014.gff3  PATHtoRACS/core/defns/TT_mRNA.id
+	PATHtoRACSrepo/core/table.sh  T_thermophila_June2014.gff3  PATHtoRACSrepo/core/defns/TT_mRNA.id
 
 or, the "genes" for the Oxytricha trifallax,
 
-	PATHtoRACSrepo/core/table.sh  Oxytricha_trifallax_022112.gff3  PATHtoRACS/core/defns/OXY_gene.id
+	PATHtoRACSrepo/core/table.sh  Oxytricha_trifallax_022112.gff3  PATHtoRACSrepo/core/defns/OXY_gene.id
 
 
 IV.ii) ORF determination
@@ -460,9 +473,9 @@ IV.ii) ORF determination
 passed to the "table.sh" script as explained in the previous examples for the analysis of
 ORFs,
 
-	PATHtoRACSrepo/core/countReads.sh   data2/_1_MED1_INPUT_S25_L007_R1_001.fastq.gz  data2/_3_MED1_IP_S27_L007_R1_001.fastq.gz  T_thermophila_June2014_assembly.fasta  T_thermophila_June2014.gff3  /dev/shm/  16  PATHtoRACS/core/defns/TT_mRNA.id
+	PATHtoRACSrepo/core/countReads.sh   data2/_1_MED1_INPUT_S25_L007_R1_001.fastq.gz  data2/_3_MED1_IP_S27_L007_R1_001.fastq.gz  T_thermophila_June2014_assembly.fasta  T_thermophila_June2014.gff3  /dev/shm/  16  PATHtoRACSrepo/core/defns/TT_mRNA.id
 
-        PATHtoRACSrepo/core/countReads.sh  SRX483016_1.fastq.gz  SRX483017_1.fastq.gz  Oxytricha_trifallax_022112_assembly.fasta  Oxytricha_trifallax_022112.gff3  /dev/shm/  16  PATHtoRACS/core/defns/OXY_gene.id
+        PATHtoRACSrepo/core/countReads.sh  SRX483016_1.fastq.gz  SRX483017_1.fastq.gz  Oxytricha_trifallax_022112_assembly.fasta  Oxytricha_trifallax_022112.gff3  /dev/shm/  16  PATHtoRACSrepo/core/defns/OXY_gene.id
 
 where "SRX483017_1.fastq.gz" corresponds to the data for run #1 ChIP-Seq, and
 "SRX483016_1.fast1.gz" corresponds to the data for the Input of the
@@ -493,10 +506,10 @@ IV.iv) Full analysis of Oxytricha trifallax
 	# 2.i) first the reference genome
 	PATHtoRACSrepo/datasets/get_GFF3-files.sh
 	# 2.ii) now the ChIP-seq data, you will the NCBI-SRA toolkit for this step!
-	PATHtoRACS/repo/datasets/get_OXYchIPseq-files.sh
+	PATHtoRACSrepo/datasets/get_OXYchIPseq-files.sh
 
 	# 3) determination of ORFs with RACS
-	PATHtoRACSrepo/core/countReads.sh  SRX483016_1.fastq.gz  SRX483017_1.fastq.gz  Oxytricha_trifallax_022112_assembly.fasta  Oxytricha_trifallax_022112.gff3  /dev/shm/  16  PATHtoRACS/core/defns/OXY_gene.idf
+	PATHtoRACSrepo/core/countReads.sh  SRX483016_1.fastq.gz  SRX483017_1.fastq.gz  Oxytricha_trifallax_022112_assembly.fasta  Oxytricha_trifallax_022112.gff3  /dev/shm/  16  PATHtoRACSrepo/core/defns/OXY_gene.idf
 
 	# 4) determination of the IGRs
 	# 4.i) first, cd into the ORF_... directory generated by the previous step where the results from the ORF part of the RACS pipeline were placed
