--- a/README
+++ b/README
@@ -490,17 +490,24 @@ or, the "genes" for the Oxytricha trifallax,
 
 
 IV.ii) ORF determination
-	For analyzing generic organisms and terms, we need to propagate the information
-passed to the "table.sh" script as explained in the previous examples for the analysis of
-ORFs,
+	For analyzing generic organisms and terms, we need to propagate the
+information passed to the "table.sh" script as explained in the previous
+examples for the analysis of ORFs,
 
 	PATHtoRACSrepo/core/countReads.sh   data2/_1_MED1_INPUT_S25_L007_R1_001.fastq.gz  data2/_3_MED1_IP_S27_L007_R1_001.fastq.gz  T_thermophila_June2014_assembly.fasta  T_thermophila_June2014.gff3  /dev/shm/  16  PATHtoRACSrepo/core/defns/TT_mRNA.id
 
         PATHtoRACSrepo/core/countReads.sh  SRX483016_1.fastq.gz  SRX483017_1.fastq.gz  Oxytricha_trifallax_022112_assembly.fasta  Oxytricha_trifallax_022112.gff3  /dev/shm/  16  PATHtoRACSrepo/core/defns/OXY_gene.id
 
-where "SRX483017_1.fastq.gz" corresponds to the data for run #1 ChIP-Seq, and
-"SRX483016_1.fast1.gz" corresponds to the data for the Input of the
-Oxytricha trifallax ChIP-Seq run #1.
+where "SRX483017_1.fastq.gz" corresponds to the data for the ChIP-Seq
+run/experiment #1, and "SRX483016_1.fast1.gz" corresponds to the data for the
+Input of the Oxytricha trifallax ChIP-Seq run/experiment #1.
+
+The following example, is exactly the same as the previous one, but with the
+solely difference that the script will try to automatically detect and use all
+the cores available in the computer; this is achieved by setting the 6th
+argument to "", which is needed when indicating the seventh argument:
+
+	PATHtoRACSrepo/core/countReads.sh  SRX483016_1.fastq.gz  SRX483017_1.fastq.gz  Oxytricha_trifallax_022112_assembly.fasta  Oxytricha_trifallax_022112.gff3  /dev/shm/  ""  PATHtoRACSrepo/core/defns/OXY_gene.id
 
 
 IV.iii) IGR determination
