--- a/README
+++ b/README
@@ -454,13 +454,14 @@ showing the trend in use of working space.
 
 I) calling reads for genic regions (ORF)
 I.i) the following command will run the countReads.sh script using:
-	- 'data2/_1_MED1_INPUT_S25_L007_R1_001.fasta.gz'  as the file with the INPUT reads
-	- 'data2/_3_MED1_IP_S27_L007_R1_001.fasta.gz' as the file with IP reads
-	- 'T_thermophila_June2014_assembly.fasta' as the reference genome for the T.thermophila organism
-	- 'T_thermophila_June2014.gff3' as the annotation file for the T.thermophila
+	- 'dataDIR/chipseq_INPUT_file.fasta.gz'  as the file with the INPUT reads
+	- 'dataDIR/chipseq_IP_file.fasta.gz' as the file with IP reads
+	- 'REFfiles/T_thermophila_June2014_assembly.fasta' as the reference genome for the T.thermophila organism
+	- 'REFfiles/T_thermophila_June2014.gff3' as the annotation file for the T.thermophila
 	- '/tmp/' as working space
+	- notice that 'dataDIR' and 'REFfiles' are the directories where the data is located and it can be given as absolute or relative paths
 
-	PATHtoRACSrepo/core/countReads.sh   data2/_1_MED1_INPUT_S25_L007_R1_001.fastq.gz  data2/_3_MED1_IP_S27_L007_R1_001.fastq.gz  T_thermophila_June2014_assembly.fasta  T_thermophila_June2014.gff3  /tmp/ 
+	PATHtoRACSrepo/core/countReads.sh   dataDIR/chipseq_INPUT_file.fastq.gz  dataDIR/chipseq_IP_file.fastq.gz  REFfiles/T_thermophila_June2014_assembly.fasta  REFfiles/T_thermophila_June2014.gff3  /tmp/ 
 
 In this case, beucase we haven't specfied the number of cores to use, the
 script will try to automatically detect the number of cores in the computer and
@@ -473,21 +474,21 @@ parallel regions of the pipeline.
 Additionally it is using the system's 'time' command to time how long the
 pipeline takes to run.
 
-	time  PATHtoRACSrepo/core/countReads.sh   data2/_1_MED1_INPUT_S25_L007_R1_001.fastq.gz  data2/_3_MED1_IP_S27_L007_R1_001.fastq.gz  T_thermophila_June2014_assembly.fasta  T_thermophila_June2014.gff3  /dev/shm/  16
+	PATHtoRACSrepo/core/countReads.sh   dataDIR/chipseq_INPUT_file.fastq.gz  dataDIR/chipseq_IP_file.fastq.gz  REFfiles/T_thermophila_June2014_assembly.fasta  REFfiles/T_thermophila_June2014.gff3  /dev/shm/  16
 
 
 II) Determination of InterGenic Regions (IGR)
 II.i) the following command will determine the intergenic regions, using:
-	- 'combinedTABLES_MED1-MED2' as the table which was determined in the ORF part of the pipeline
-	- 'dataset/T_thermophila_June2014.sorted.gff3' as the micro-organism reference genome file
-	- 'interGENs_MED1-MED2.csv' is the name of the table that the IGR part of the pipeline will
+	- 'FINAL.table.chipseq_INPUT_file-chipseq_IP_file' as the table which was determined in the ORF part of the pipeline; this file is located in the output subdirectory ORF_RACS_results-YYYYMMDD-HHMM
+	- 'REFfiles/T_thermophila_June2014.gff3' as the micro-organism reference genome file
+	- 'interGENs_chipseqExp_INPUTid-IPid.csv' is the name of the table that the IGR part of the pipeline will
 		generate, ie. this will be the output of this part of the pipeline
 	- 'samples.file' is a text file containing the name of the BAM output file, also generated when
 		running the ORF part from RACS; they are usually named as
                 alnDATASET_INDICATORS_ChIP_SXX_RY_ZZZ.fastq.gz-sorted.bam
                 alnDATASET_INDICATORS_Input_SXX_RY_ZZZ.fastq.gz-sorted.bam
 
-	PATHtoRACSrepo/core/intergenic/det-interGenes.sh  combinedTABLES_MED1-MED2  dataset/T_thermophila_June2014.sorted.gff3  interGENs_MED1-MED2.csv  samples.file
+	PATHtoRACSrepo/core/intergenic/det-interGenes.sh  FINAL.table.chipseq_INPUT_file-chipseq_IP_file  REFfiles/T_thermophila_June2014.sorted.gff3  interGENs_chipseqExp_INPUTid-IPid.csv  samples.file
 
 
 II.ii) we included a submission script in the 'hpc' directory, named "IGR-jobs_parallel.gnu",
@@ -552,11 +553,11 @@ filters have to be specified; eg.
 
 For instance, the following command will select the micro-RNA for the Tetrahymena thermophila,
 
-	PATHtoRACSrepo/core/table.sh  T_thermophila_June2014.gff3  PATHtoRACSrepo/core/defns/TT_mRNA.id
+	PATHtoRACSrepo/core/table.sh  REFfiles/T_thermophila_June2014.gff3  PATHtoRACSrepo/core/defns/TT_mRNA.id
 
 or, the "genes" for the Oxytricha trifallax,
 
-	PATHtoRACSrepo/core/table.sh  Oxytricha_trifallax_022112.gff3  PATHtoRACSrepo/core/defns/OXY_gene.id
+	PATHtoRACSrepo/core/table.sh  REFfiles/Oxytricha_trifallax_022112.gff3  PATHtoRACSrepo/core/defns/OXY_gene.id
 
 
 IV.ii) ORF determination
@@ -564,9 +565,9 @@ IV.ii) ORF determination
 information passed to the "table.sh" script as explained in the previous
 examples for the analysis of ORFs,
 
-	PATHtoRACSrepo/core/countReads.sh   data2/_1_MED1_INPUT_S25_L007_R1_001.fastq.gz  data2/_3_MED1_IP_S27_L007_R1_001.fastq.gz  T_thermophila_June2014_assembly.fasta  T_thermophila_June2014.gff3  /dev/shm/  16  PATHtoRACSrepo/core/defns/TT_mRNA.id
+	PATHtoRACSrepo/core/countReads.sh   dataDIR/chipseq_INPUT_file.fastq.gz  dataDIR/chipseq_IP_file.fastq.gz  REFfiles/T_thermophila_June2014_assembly.fasta  REFfiles/T_thermophila_June2014.gff3  /dev/shm/  16  PATHtoRACSrepo/core/defns/TT_mRNA.id
 
-        PATHtoRACSrepo/core/countReads.sh  SRX483016_1.fastq.gz  SRX483017_1.fastq.gz  Oxytricha_trifallax_022112_assembly.fasta  Oxytricha_trifallax_022112.gff3  /dev/shm/  16  PATHtoRACSrepo/core/defns/OXY_gene.id
+        PATHtoRACSrepo/core/countReads.sh  dataDIR/SRX483016_1.fastq.gz  dataDIR/SRX483017_1.fastq.gz  REFfiles/Oxytricha_trifallax_022112_assembly.fasta  REFfiles/Oxytricha_trifallax_022112.gff3  /dev/shm/  16  PATHtoRACSrepo/core/defns/OXY_gene.id
 
 where "SRX483017_1.fastq.gz" corresponds to the data for the ChIP-Seq
 run/experiment #1, and "SRX483016_1.fast1.gz" corresponds to the data for the
@@ -578,7 +579,7 @@ solely difference that the script will try to automatically detect and use all
 the cores available in the computer; this is achieved by setting the 6th
 argument to "", which is needed when indicating the seventh argument:
 
-	PATHtoRACSrepo/core/countReads.sh  SRX483016_1.fastq.gz  SRX483017_1.fastq.gz  Oxytricha_trifallax_022112_assembly.fasta  Oxytricha_trifallax_022112.gff3  /dev/shm/  ""  PATHtoRACSrepo/core/defns/OXY_gene.id
+	PATHtoRACSrepo/core/countReads.sh  dataDIR/SRX483016_1.fastq.gz  dataDIR/SRX483017_1.fastq.gz  REFfiles/Oxytricha_trifallax_022112_assembly.fasta  REFfiles/Oxytricha_trifallax_022112.gff3  /dev/shm/  ""  PATHtoRACSrepo/core/defns/OXY_gene.id
 
 
 IV.iii) IGR determination
@@ -586,7 +587,7 @@ IV.iii) IGR determination
 considerations other than using the "FINAL.table.*" file generated by the RACS'
 ORF tool. Eg.
 
-	PATHtoRACSrepo/core/intergenic/det-interGenes.sh FINAL.table.SRX483016_1-SRX483017_1 Oxytricha_trifallax_022112.gff3 interGENs_run1_OXY.csv  sample.input
+	PATHtoRACSrepo/core/intergenic/det-interGenes.sh  FINAL.table.SRX483016_1-SRX483017_1  REFfiles/Oxytricha_trifallax_022112.gff3  interGENs_run1_OXY.csv  sample.input
 
 where the file "sample.input" contains the following files:
 
