--- a/README
+++ b/README
@@ -7,6 +7,8 @@ of ChIP-Seq data and has been applied to the organism Tetrahymena thermophila.
 
 === Content ===
 
+* Overview
+
 * Requirements
 
 * Installation
@@ -31,6 +33,26 @@ of ChIP-Seq data and has been applied to the organism Tetrahymena thermophila.
 
 ================
 
+* Overview
+
+Our computational pipeline Rapidly Aanalyze ChIP-Seq data (RACS) can be used
+for any genome that has files containing coordinate sequences of interest.
+Our pipeline provides a unified tool to perform comprehensive ChIP-Seq data
+analysis.
+For instance, with RACS users obtain the co-ordinates of ChIP peaks as well as
+information regarding their relative enrichment across the genome, i.e. number
+of significant peaks found with genic versus non-genic regions.
+RACS is a versatile computational pipeline suitable to analyze ChIP-Seq data
+generated using any model organism. 
+
+
+This pipeline is open source under the MIT license, and researchers are welcome
+to use it.
+We will appreciate if users can let us know if they found bugs or could provide
+feedback about its use and experience using RACS.
+Please cite our paper (CITE_RACS) when ever you are using RACS.
+
+
 
 * Requirements
 
@@ -51,10 +73,17 @@ Additionally we provide other subdirectories containing the following:
 			also we included one monitoring tool to observe the memory/RAMdisk usage while RACS is running
 	- "datasets": examples of the data used to test and run our pipeline
 
-This pipeline is open source under the MIT license, and researchers are welcome to use it.
-We will appreciate if users can let us know if they found bugs or could provide feedback about
-its use and experience using RACS.
-Please cite our paper (CITE_RACS) when ever you are using RACS.
+- Other dependencies:
+Our core scripts do not require any additional R packages; however, the
+comparison tools, depending on what format the data to compare with is given,
+might use some spreadsheet reader package.
+For instance, we have included one named \texttt{xlsx} which allows to read
+proprietary spreadsheet formats.
+To aid the process of identifying and installing the auxiliary R packages
+needed by these tools, we included an R script called "setup.R", that can be
+run from the command line to check and install these dependencies (more details
+are presented in the Examples section).
+
 
 
 
